--- a/Productos.css
+++ b/Productos.css
@@ -97,14 +97,17 @@
     grid-gap: 20px;
   }
   
-  
-.product {
+  .product {
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 20px;
     text-align: center;
     transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Alinea los elementos verticalmente */
+    height: 400px; /* Ajusta la altura del contenedor */
 }
   
 .product:hover {
@@ -112,12 +115,16 @@
 }
   
 .product img {
-    max-width: 100%;
+  max-width: 100%;
+  max-height: 120px;
+  object-fit: cover;
 }
+
   
 .product h3 {
     margin-top: 20px;
     font-size: 24px;
+    height: 80px;
 }
   
 .product p.price {
@@ -143,12 +150,13 @@
 footer {
     background-color: #333;
     color: #fff;
-    padding: 20px;
+    padding: 0px;
     text-align: center;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
+    height: auto;
 }
 
 /* Estilo del formulario de búsqueda */
