--- a/vermasIphone14.css
+++ b/vermasIphone14.css
@@ -113,6 +113,7 @@
   
   .product-info p {
     margin-top: 20px;
+    max-width: 60%;
   }
   
   
@@ -147,5 +148,11 @@
     height: 100%;
     margin-right: 5px;
     }
+    }
+
+    .product-info p {
+      margin-top: 20px;
+      max-width: 80%;
+      margin-left: 60px;
     }
     
