--- a/inicio.css
+++ b/inicio.css
@@ -18,11 +18,16 @@ html, body {
   
 
 .brandname-inicio{
-    color: #333;
+    color: white;
+    font-weight: bold;
 }
 
 ul{
     list-style: none;
+}
+
+nav a:hover{
+  color: yellow;
 }
 
 header h1 {
@@ -48,7 +53,7 @@ header {
   }
   
   .frase {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.189);
     padding: 1rem;
     border-radius: 5px;
     text-align: center;
@@ -56,7 +61,8 @@ header {
   
   .frase p {
     font-size: 1.5rem;
-    color: black;
+    color: white;
+    font-weight: bold;
   }
   
   /* Cambiar imagen de fondo cada 2 segundos */
